<resources>
  <string name="app_name">pulse.eco</string>
  <string name="btn_check_pm10">PM10</string>
  <string name="btn_check_pm25">PM2.5</string>
  <string name="btn_check_noise">NOISE</string>
  <string name="btn_check_temperature">TEMP</string>

  <string name="btn_check_humidity">HUMD</string>
  <string name="pm10Str">pm10</string>
  <string name="pm25Str">pm25</string>
  <string name="noiseStr">noise</string>
  <string name="temperatureStr">temperature</string>
  <string name="humidityStr">humidity</string>
  <string name="pressureStr">pressure</string>
  <string name="unknwonStr">UNKNOWN</string>
  <string name="ozoneStr">ozone</string>
  <string name="carbonMonoxideStr">carbon monoxide</string>

  <string name="sulfurDioxideStr">sulfur dioxide</string>
  <string name="ok_action">OK</string>
  <string name="close_action">Close</string>

  <string name="cancel_action">Cancel</string>
  <string name="soft_refresh_start">Loading new data.</string>
  <string name="soft_refresh_finish">Loading has finished.</string>
  <string name="technical_error">Technical error occurred. Please try again.</string>
  <string name="error_msg_no_internet_connection">No internet connection available.</string>
  <string name="location_fix_failed_error_message">Failed to acquire your location.</string>
  <string name="location_fix_failed_locatio_services_disabled">Failed to acquire your location, please enable location services (GPS) on your device.</string>
  <string name="no_location_permission_error_message">Location permission is required to find nearest sensor.</string>
  <string name="active_sensors_title">Locations</string>
  <string name="please_select_date">Please select date</string>
  <string name="select_sensors">Select sensors</string>
  <string name="end_date_needs_to_be_readjusted">End date needs to be readjusted.</string>
  <string name="start_date_needs_to_be_readjusted">Start date needs to be readjusted.</string>
  <string name="no_sensors_selected">Select some sensors so we can draw a graph</string>
  <string name="register_link_text">Don\'t have an account? Sign Up</string>
  <string name="privacy_policy_title">Privacy Policy</string>
  <string name="graph_no_sensors_selected">You can select sensors by clicking the pins on the map. Add them as favorites in order to be displayed here.</string>
  <string name="no_sensors_selected_message">You can select up to 5 sensors by clicking the pins on the map. Bookmark them so they can be displayed here. You can also select sensors from the button.</string>
  <string name="sensors_select_dialog_title">Choose up to 5 sensors</string>
  <string name="sensor_select_dialog_warning_when_more_selected">Maximum 5 favourite sensors</string>
  <string name="tooltip_maximum_sensors_reached">You can add up to 5 sensors</string>
  <string name="tooltip_add_sensor_as_favourite">You can add this sensor as favourite</string>
  <string name="bottom_sheet_default_no_sensors_selected">No selected sensors</string>
  <string name="bottom_sheet_has_sensors_selected">Graph data for selected sensors</string>
  <string name="disclaimer_text">Disclaimer: The data shown comes directly from the used sensors. We do not guarantee of their correctness.</string>
  <string name="disclaimer_details_title">Disclaimer</string>
  <string name="disclaimer_details_text">The data collected are not manipulated in any way. We do not guarantee of their correctness. The MOEPP sensor data are stored as received from their service, while the CityPulse devices depend on the correctness of the used sensors: Nova PM SDS011/SDS021, DHT22 and Grove Sound sensor. Please refer to their data sheets for details.</string>
  <string name="disclaimer_details_action">Details</string>
  <string name="privacy_policy_action">Privacy Policy</string>
  <string name="crowdsourcing_disclaimer">Crowdsourced sensor data.</string>
  <string name="city_select_missing_location_permission_error_message">Missing location permission needed to sort cities by distance. Please allow in application settings.</string>
  <string name="city_select_location_services_disabled_error_message">Location services disabled, can\'t acquire current location. Please allow in location services in phone settings.</string>
  <string name="map_preferences_map_type_title">MAP TYPE</string>
  <string name="map_preferences_map_type_default">Default</string>
  <string name="map_preferences_map_type_satellite">Satellite</string>
  <string name="map_preferences_map_type_terrain">Terrain</string>
  <string name="map_preferences_data_visualization_title">DATA VISUALIZATION</string>
  <string name="map_preferences_data_visualization_sensor_marker">Sensor markers</string>
  <string name="map_preferences_data_visualization_geographic">Geographic</string>
  <string name="overall_banner_title_average">average</string>

  <string name="fab_content_desc">Add city</string>
  <string name="add_city">Add city</string>
  <string name="search">Search City or Country</string>
  <string name="city_selection">City Selection</string>

  <string name="search_suggested">Suggested</string>
  <string name="search_results">Results</string>
  <string name="no_results_found">No results found</string>
  <string name="removed_message">Removed from selected cities</string>
  <string name="data_not_available">N/A</string>
  <string name="past_week_for_whole_city">Past week average data for %s (%s)</string>
  <string name="past_week_for_specific_sensor">Past week average data (%s)</string>
  <string name="placeholder_for_name_of_day_for_weekly_average_data_view">Day</string>

  <plurals name="sensor_limit_reached_message">
    <item quantity="one">You can\'t select more than %d sensor.</item>
    <item quantity="other">You can\'t select more than %d sensors.</item>
  </plurals>

  <string name="confirm_title">Confirmation</string>
  <string name="confirm_body">Are you sure you want to change the language?</string>
  <string name="btn_yes">YES</string>
  <string name="btn_no">NO</string>

  <!-- Internationalisation -->
  <string name="language">EN</string>
  <string name="language_en">English</string>
  <string name="language_mk">Macedonian</string>
  <string name="language_de">German</string>

  <string name="language_title">Choose language</string>

  <!-- City select -->
  <string name="history">History</string>
  <string name="currently_selected">Currently selected</string>
  <string name="select_city">Select city</string>
  <string name="no_recent">No recent cities</string>

</resources>
