<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


  <androidx.cardview.widget.CardView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:cardCornerRadius="@dimen/components_corner_radius"
      android:layout_margin="@dimen/components_corner_radius">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/component_inner_spacing"
        android:orientation="vertical"
        tools:background="@color/white"
        >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/language_title"/>

      <RadioGroup
          android:id="@+id/mapTypeRadioGroup"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          >

        <RadioButton
            android:id="@+id/language_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_en"
            />

        <RadioButton
            android:id="@+id/language_mk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_mk"
            />
        <RadioButton
          android:id="@+id/language_de"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/language_de"
          />

      </RadioGroup>
    </LinearLayout>
  </androidx.cardview.widget.CardView>
</FrameLayout>

