<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


  <androidx.cardview.widget.CardView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:cardCornerRadius="@dimen/components_corner_radius"
      android:layout_margin="@dimen/components_corner_radius">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/component_inner_spacing"
        android:orientation="vertical"
        tools:background="@color/white"
        >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/map_preferences_map_type_title"/>

      <RadioGroup
          android:id="@+id/mapTypeRadioGroup"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          >

        <RadioButton
            android:id="@+id/mapTypeRadioItemDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_preferences_map_type_default"
            />


        <RadioButton
            android:id="@+id/mapTypeRadioItemHikeBikeMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_preferences_map_type_hikebikemap"
            />

        <RadioButton
            android:id="@+id/mapTypeRadioItemOpenTopo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_preferences_map_type_openTopo"
            />


      </RadioGroup>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/components_between_spacing"
          android:text="@string/map_preferences_data_visualization_title"/>

      <CheckBox
          android:id="@+id/dataVisualizationItemSensorMarkers"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/map_preferences_data_visualization_sensor_marker"
          />

      <CheckBox
          android:id="@+id/dataVisualizationItemGeographic"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/map_preferences_data_visualization_geographic"
          />


    </LinearLayout>
  </androidx.cardview.widget.CardView>
</FrameLayout>

